--- a/package.json
+++ b/package.json
@@ -86,5 +86,12 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "dependencies": {
+    "@ckeditor/ckeditor5-alignment": "^11.1.3",
+    "@ckeditor/ckeditor5-highlight": "^11.0.4",
+    "@ckeditor/ckeditor5-remove-format": "^10.0.3",
+    "@ckeditor/ckeditor5-word-count": "^10.0.1",
+    "superagent": "^5.1.0"
   }
 }
